# AI_tutor_RAG

./: README.md  Solution.docx  dockerfile  frontend.py  main.py  pyproject.toml  requirements.txt  ~$lution.docx
